# cpe442

./: .gitignore
Tutorial2/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Sobel  Tutorial.html  Tutorial.md  build.sh  cmake_install.cmake  main.cpp  simple.cpp  sobel.cpp  sobel.hpp
Tutorial2/Simple/: sobel
Tutorial2/src/: sobel.cpp
Tutorial3/: Makefile  main.cpp  sobel_multithread.cpp  sobel_multithread.hpp
Tutorial4/: Makefile  Tutorial 4.html  Tutorial 4.md  main.cpp  sobel_vec.cpp  sobel_vec.hpp
Tutorial5/: Makefile  Perf_tutorial.html  Perf_tutorial.md  main.cpp  sobel.out.asm  sobel_perf.cpp  sobel_perf_init.cpp  sobel_perf_init.hpp
Tutorial6/: Makefile  main.cpp  sobel_perf.cpp  sobel_perf.hpp
